[package]
name = "twba-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-common.workspace = true

tracing = "0.1"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.4" }
actix-web = "4.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
